fixes overflow problem

--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -35,6 +35,7 @@
             padding: 0;
             background: none;
             font-size: 0.8rem;
+            overflow: auto;
         }
     }
 
